--- a/src/main/cards362app/index.html
+++ b/src/main/cards362app/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>52 Card Pickup</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="js/3rdparty/einaregilsson-cards-js/example.css"/>
+    <link rel="stylesheet" href="css/cards362.css"/>
     <script src="js/jquery-1.7.min.js"></script>
   </head>
   <body>
