Added planes (for fixed or rotated).

--- a/src/main/cards362app/index.html
+++ b/src/main/cards362app/index.html
@@ -10,12 +10,17 @@
     <h1>52 Card Pickup</h1>
 	
     <img class="preload" src="js/3rdparty/einaregilsson-cards-js/img/cards.png"/>
-
+    
     <div id="card-table">
-      <button id="deal">DEAL</button>
+      <div id="fixed-plane">
+      </div>
+      <div id="rotatable-plane" class="player-rotated">
+      </div>
     </div>
 
     <script src="js/3rdparty/einaregilsson-cards-js/cards.js"></script>
+    <script src="js/cards362.js"></script>
     <script src="js/cards-socket.js"></script>
+    <!--script src="js/test.js"></script-->
   </body>
 </html>
