--- a/src/main/cards362app/index.html
+++ b/src/main/cards362app/index.html
@@ -11,7 +11,16 @@
 	
     <img class="preload" src="js/3rdparty/einaregilsson-cards-js/img/cards.png"/>
 
-    <div id="card-table" ">
+    <!--div id="game-menu">
+      <button id="deal" class="menu-option">DEAL</button></br>
+      <button id="deal" class="menu-option">DEAL</button></br>
+      <button id="deal" class="menu-option">DEAL</button></br>
+      <button id="deal" class="menu-option">DEAL</button></br>
+      <button id="deal" class="menu-option">DEAL</button></br>
+    </div-->
+    <!--div id="overlay">
+    </div-->
+    <div id="card-table">
       <button id="deal" style="position: absolute; left: 256px; top: 150px; z-index: 3;">DEAL</button>
       <div id="fixed-plane">
       </div>
